# CCTS

Programming_Assign_2/: BTO.cpp  BTO.h  BTO.pcode  BTO_log_file.txt  MVTO_bounded.cpp  MVTO_bounded.h  MVTO_bounded.pcode  MVTO_bounded_log_file.txt  MVTO_unbounded.cpp  MVTO_unbounded.h  MVTO_unbounded_and_garbage_collection.pcode  MVTO_unbounded_garbage_collection.cpp  MVTO_unbounded_garbage_collection.h  MVTO_unbounded_garbage_collection_log_file.txt  MVTO_unbounded_log_file.txt  a.out  bto  graph.ipynb  input.txt  main_bto.cpp  main_mvto_bounded.cpp  main_mvto_unbounded.cpp  main_mvto_unbounded_garbage_collection.cpp  mvto  mvto_b  mvto_gc  mvto_un
Programming_assign1/: BOCC.cpp  BOCC.h  BOCC_cs20btech11014.cpp  BOCC_log_file.txt  Data.h  FOCC_CTA.cpp  FOCC_CTA_cs20btech11014.h  FOCC_CTA_log_file.txt  FOCC_OTA.cpp  FOCC_OTA_cs20btech11014.h  bocc  focc_cta  focc_ota  input.txt  main_bocc.cpp  main_focc_cta.cpp  main_focc_ota.cpp  test
Project-CS20BTECH11024-CS20BTECH11014/algo-1/: CMakeLists.txt  README.md  input.txt
Project-CS20BTECH11024-CS20BTECH11014/algo-1/include/: scheduler.h  utils.h
Project-CS20BTECH11024-CS20BTECH11014/algo-1/lib/: main.cpp  scheduler.cpp
Project-CS20BTECH11024-CS20BTECH11014/algo-2/: CMakeLists.txt
Project-CS20BTECH11024-CS20BTECH11014/algo-2/include/: scheduler.h  utils.h
Project-CS20BTECH11024-CS20BTECH11014/algo-2/lib/: main.cpp  scheduler.cpp
